# HackingGame

./: .gitignore  CMakeLists.txt  README-ru.md  imgui.ini  todo-list.md
imgui/: imgui_draw.cpp
imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
resources/levels/: level1.json  level4.json
resources/models/: walls.blend
resources/shaders/: common.glsl  postprocessing.frag
resources/shaders/animation/: animation.vert  enemy-damage.frag  enemy-destroy-billboard.frag  enemy-destroy-flat.frag  minion-destroy-billboard.frag  minion-destroy-flat.frag  particle-cube.frag  player-damage.frag  player-destroy-billboard.frag  player-destroy-flat.frag  textured-animation.vert
src/: imgui_util.cpp  imgui_util.h  texture.cpp  texture.h  util.h
src/entity/: bullet.cpp  damageable.h  enemy.cpp  entity.h  minion.cpp  platform.cpp  platform.h  player.cpp  player.h  simple_entity.h  walls.cpp  walls.h
src/entity/animation/: animation.cpp  animation.h  billboard_animation.h  enemy_destroy.cpp  enemy_destroy.h  flat_and_billboard_animation.cpp  flat_and_billboard_animation.h  minion_destroy.cpp  minion_destroy.h  player_destroy.cpp  player_destroy.h
src/gui/: fading_object.cpp  fading_object.h  gui_context.cpp  gui_context.h  menu.cpp  menu.h  menu_bottom_panel.cpp  menu_bottom_panel.h  menu_select.cpp  menu_select.h  system_message_popup.cpp  system_message_popup.h  win_screen.cpp  win_screen.h
src/level/: level.cpp
src/main/: globals.cpp  globals.h  init.cpp  init.h  main.cpp  main.h  render.cpp  render.h  start.cpp
src/model/: colored_model.cpp  colored_model.h  models.cpp  models.h  textured_model.cpp  textured_model.h
src/shader/: shader.cpp  shader.h  shader_loader.cpp  shader_manager.cpp
uml/: cpp2uml.py  entity.txt  other.txt
записки разраба/: Анимации Player
